# sphinx_computer_tools

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  README.md  README.rst  pyproject.toml
.github/workflows/: CI.yml
docs/source/: conf.py  index.rst
docs/source/_static/asciicast/bash/: autocompletion_output.cast  backward_search_output.cast  change_structure_output.cast  history_output.cast  man_page_output.cast  navigation_output.cast
docs/source/_static/asciicast/git/: automerge_output.cast  first_file_output.cast  git_setup_output.cast  merge_output.cast  navigating_output.cast  rebase_output.cast  remote_output.cast  sync_output.cast
docs/source/_static/asciicast/ssh/: access_key_output.cast  bastion_output.cast  config_file_output.cast  copy_key_output.cast  copy_output.cast  create_key_output.cast  password_output.cast  rsync_output.cast
docs/source/_static/asciicast/zsh/: path_expansion.cast
docs/source/_static/css/: custom.css
docs/source/advanced_tools/: dotfiles.rst  index.rst  vscode.rst  zsh.rst
docs/source/advanced_tools/zsh_cast/: variable_expansion.cast
docs/source/basic_tools/: bash.rst  git.rst  index.rst  ssh.rst  vscode.rst
docs/source/introduction/: disclaimer.rst  index.rst  motivation.rst  setup.rst
